# binfire

./: Cargo.toml  README.md  binfire.toml  matrix.json
.binfire/: v0.0.0-foo.toml
.github/workflows/: binfire-builder.yml  ci.yml
binfire-bin/: Cargo.toml
binfire-bin/src/: args.rs  main.rs
binfire-lib/: Cargo.toml
binfire-lib/src/: add.rs  avail.rs  lib.rs
