[package]
name = "binfire"
version = "0.0.0"
edition = "2021"
categories = ["development-tools"]
keywords = ["whatever"]
description = "Whatever"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/rinse-repeat/binfire"

[dependencies]
binfire-lib = { version = "0.0", default-features = false, path = "../binfire-lib" }
pico-args = { version = "0.5", features = ["combined-flags"] }
regex = { version = "1.6", default-features = false, features = ["std"] }
tokio = { version = "1.29", features = ["full"] }
