[package]
name = "binfire-lib"
version = "0.0.0"
edition = "2021"
categories = ["development-tools"]
keywords = ["whatever"]
description = "Whatever"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/rinse-repeat/binfire"

[dependencies]
thiserror = { version = "1.0" }

# armv7-unknown-linux-musleabihf -> no ring -> openssl
# aarch64-pc-windows-msvc -> no ring -> native_tls
# aarch64-pc-windows-gnu -> no ring -> native_tls
#[target.'cfg(target_arch = "x86_64")'.dependencies]

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.7", features = ["parse"] }
url = { version = "2.4" }
regex = { version = "1.6" }
once_cell = { version = "1.18" }
